(synthetics-pools): fix ui jumping

--- a/src/components/MarketPoolSwap/MarketDropdown/MarketDropdown.scss
+++ b/src/components/MarketPoolSwap/MarketDropdown/MarketDropdown.scss
@@ -26,8 +26,9 @@
 }
 
 .MarketDropdown-options {
-  max-width: 23rem;
   left: 1.3rem;
+  right: inherit;
+  width: auto;
   top: 5rem;
 }
 
